second attempt at fixing remove link on mobile.

--- a/classes.css
+++ b/classes.css
@@ -4,7 +4,7 @@ body {
 .hide {
   display: none;
 }
-.js-remove-link:hover {
+.js-remove-link {
   cursor: pointer;
 }
 .scrollBox {
